Updated YAML disconnect and fixed any typing in VSC
