# backend/swagger_server/models/__init__.py
@@ -3,5 +3,7 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
-from swagger_server.models.game import Game
+from swagger_server.models.coach import Coach
+from swagger_server.models.player import Player
+from swagger_server.models.predicted_game import PredictedGame
 from swagger_server.models.team import Team
